--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -20,8 +20,12 @@
                     </select>
                 </form>
             </div>
-            <div class="text-2xl text-stone-200 font- mt-10   ">
-                    <a href="/owners/admin">Create Catalog </a>
+            <div class="text-2xl text-blue-700 mt-5">
+                    <a href="/owner-login"> Admin Panel</a>
+                </div>
+
+            <div class="text-xl text-red-700 mt-5">
+                    <a href="/owners/admin"> Create Catalog</a>
                 </div>
             <div class="flex flex-col mt-20 text-brown">
                 <a class="block w-fit mb-2" href="">New Collection</a>
